# tradingAlgoSingleThread

./: .gitignore  CMakeLists.txt  README  config.cpp  config.h  config.json
JSON/: config.json
include/: config.h  dataParser.h  globalQuote.h  indicators.h  marketDataAPI.h  utility.h
out_cygwin/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: config.cpp  dataParser.cpp  globalQuote.cpp  indicators.cpp  main.cpp  marketDataAPI.cpp  utility.cpp
